[metadata]
name = emrichen
version = attr:emrichen.__version__
description = Template engine for YAML & JSON
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT
author = Santtu Pajukanta
author_email = santtu@pajukanta.fi
url = http://github.com/con2/emrichen

[options.packages.find]
exclude =
    tests

[options]
packages = find:
zip_safe = True
python_requires = >=3.6
install_requires =
    PyYAML
    pyaml~=21.10
    jsonpath-rw~=1.4.0

[options.entry_points]
console_scripts =
    emrichen = emrichen.__main__:main

[options.extras_require]
test =
    pytest~=6.2.3
    pytest-cov~=2.0
lint =
    black==23.3.0
    flake8>=3.9.2
    mypy>=0.971
    isort>=5.9.2

[tool:pytest]
addopts = --verbose
python_files = tests/*.py

[flake8]
ignore =
    # line length; taken care of by black
    E501
    # operator-linebreak stuff
    W503

[isort]
profile = black
multi_line_output = 3
